--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+label, input {
+	padding-top: 0;
+	padding-bottom: 0;
+	height: 2rem;
+}
