Stash up to working options.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,1 @@
-<div class="container">
-
-	<div class="row">
-		<button i18n (click)="toggleNewSurvey()" class="btn btn-primary">New Survey</button>
-	</div>
-
-	<form *ngIf="newSurveyVisible" #surveyForm="ngForm" (ngSubmit)="addSurvey(surveyForm.value)">
-		<app-survey-form  [(ngModel)]="survey" [survey]="survey" name="survey"  ></app-survey-form>
-
-		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! surveyForm.valid" />
-	</form>
-
-	<ng-container *ngIf="hasSurveys ; else noSurveys">
-
-		<table class="table">
-			<thead>
-				<tr>
-					<th scope="col" i18n>Id</th>
-					<th scope="col" i18n>Name</th>
-					<th scope="col" i18n>Description</th>
-					<th scope="col" i18n>fromTimeStamp</th>
-					<th scope="col" i18n>untilTimeStamp</th>
-					<th scope="col" i18n>Delete</th>
-				</tr>
-			</thead>
-			<tr *ngFor="let survey of getSurveys()">
-				<td><a routerLink="/survey" [queryParams]="{ id: survey.id }">{{survey.id}}</a></td>
-				<td>{{survey.name}}</td>
-				<td>{{survey.description}}</td>
-				<td>{{survey.fromDate.year}}-{{survey.fromDate.month}}-{{survey.fromDate.day}}  {{survey.fromTime.hour}}-{{survey.fromTime.minute}}-{{survey.fromTime.second}}</td>
-				<td>{{survey.untilDate.year}}-{{survey.untilDate.month}}-{{survey.untilDate.day}}  {{survey.untilTime.hour}}-{{survey.untilTime.minute}}-{{survey.untilTime.second}}</td>
-				<td><button (click)="deleteSurvey(survey.id)" i18n>Delete</button></td>
-			</tr>
-		</table>
-	</ng-container>
-
-	<ng-template #noSurveys>
-		<h1 i18n>No surveys.</h1>
-	</ng-template>
-
-</div>
+<router-outlet></router-outlet>
