--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -1,34 +1,52 @@
-<p>XXXX</p>
-<div class="row">
-	<button i18n (click)="showNewOption()" class="btn btn-primary">New Option</button>
-</div>
+<a routerLink="/">Top</a>
+
+<ng-container *ngIf="errorMessage == null; else error">
+
+	<form #surveyForm="ngForm" (ngSubmit)="updateSurvey(surveyForm.value.survey)">
+		<app-survey-form [(ngModel)]="survey" [survey]="survey" name="survey"></app-survey-form>
+
+		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! surveyForm.valid" />
+	</form>
 
 
-<form #optionForm="ngForm" (ngSubmit)="addNewOption(optionForm.value)">
-	<div class="form-group row">
-		<label for="name" class="col-sm-2 col-form-label" i18n>Short Name</label>
-		<input type="text" ngModel name="name" id="name" class="form-control col-sm-10" required/>
+
+	<div class="row">
+		<button i18n (click)="showNewOption()" class="btn btn-primary">New Option</button>
 	</div>
 
 
-	<div class="form-group row">
-		<label for="description" class="col-sm-2 col-form-label" i18n>Description</label>
-		<textarea ngModel name="description" id="description" class="form-control col-sm-10"></textarea>
+
+	<form #optionForm="ngForm" (ngSubmit)="addOption(optionForm.value)">
+		<div class="form-group row">
+			<label for="name" class="col-sm-2 col-form-label" i18n>Short Name</label>
+			<input type="text" ngModel name="name" id="name" class="form-control col-sm-10" required/>
+		</div>
+
+
+		<div class="form-group row">
+			<label for="description" class="col-sm-2 col-form-label" i18n>Description</label>
+			<textarea ngModel name="description" id="description" class="form-control col-sm-10"></textarea>
+		</div>
+
+
+		<div class="form-group row">
+			<label for="photo" class="col-sm-2 col-form-label" i18n>Photo</label>
+			<input type="file" ngModel name="photo" (change)="optionForm.value.image = $event.target.files[0]" />
+		</div>
+
+		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! optionForm.valid" />
+
+	</form>
+
+
+	<div *ngFor="let option of survey.options">
+		<p>{{ option.name }}</p>
+		<img [src]="option.imageUrl | safe" width="200" height="150" />
+
 	</div>
+</ng-container>
 
 
-	<div class="form-group row">
-		<label for="photo" class="col-sm-2 col-form-label" i18n>Photo</label>
-		<input type="file" ngModel name="photo" (change)="optionForm.value.photo = $event.target.files[0]" />
-	</div>
-
-	<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! optionForm.valid" />
-
-</form>
-
-
-<div *ngFor="let option of options">
-	<p>{{ option.name }}</p>
-	<img [src]="option.srcUrl" width="200" height="150" />
-
-</div>
+<ng-template #error>
+	<h1>{{ errorMessage }}</h1>
+</ng-template>
