--- a/src/app/survey-form/survey-form.component.html
+++ b/src/app/survey-form/survey-form.component.html
@@ -1,14 +1,16 @@
 <div class="form-group row">
 	<label for="name" class="col-sm-3 col-form-label" i18n>Short Name</label>
 
-	<input type="text" [(ngModel)]="survey.name" name="name" id="name" class="form-control col-sm-9" (ngModelChange)="change()" required/>
+	<input type="text" [(ngModel)]="survey.name" name="name" id="name" class="form-control col-sm-9"
+		(ngModelChange)="change()" (blur)="touch()" required/>
 </div>
 
 
 <div class="form-group row">
 	<label for="description" class="col-sm-3 col-form-label" i18n>Description</label>
 
-	<textarea [(ngModel)]="survey.description" name="description" id="description" class="form-control col-sm-9" (ngModelChange)="change()"></textarea>
+	<textarea [(ngModel)]="survey.description" name="description" id="description" class="form-control col-sm-9"
+		(ngModelChange)="change()"  (blur)="touch()"></textarea>
 </div>
 
 
@@ -16,9 +18,11 @@
 	<label class="col-sm-3 col-form-label" i18n>Date from</label>
 
 	<input type="text" ngbDatepicker [(ngModel)]="survey.fromDate" name="fromDate" #fromDate="ngbDatepicker" (click)="fromDate.toggle()"
-	 size="11" readonly class="form-control  col-sm-4" required  (ngModelChange)="change()" />
+	 size="11" readonly class="form-control  col-sm-4" required
+	 	(ngModelChange)="change()"  (blur)="touch()" />
 
-	<ngb-timepicker [(ngModel)]="survey.fromTime" name="fromTime" class="col-sm-5" (ngModelChange)="change()" required [spinners]="false"></ngb-timepicker>
+	<ngb-timepicker #fromTimePicker [(ngModel)]="survey.fromTime" name="fromTime" class="col-sm-5"
+		(ngModelChange)="change()" required [spinners]="false"></ngb-timepicker>
 </div>
 
 
@@ -26,7 +30,9 @@
 	<label class="col-sm-3 col-form-label" i18n>Date until</label>
 
 	<input type="text" ngbDatepicker [(ngModel)]="survey.untilDate" name="untilDate" #untilDate="ngbDatepicker" (click)="untilDate.toggle()"
-	 size="11" readonly class="form-control col-sm-4" (ngModelChange)="change()" required/>
+	 size="11" readonly class="form-control col-sm-4"
+	 	(ngModelChange)="change()" (blur)="touch()" required/>
 
-	<ngb-timepicker [(ngModel)]="survey.untilTime" name="untilTime" class="col-sm-5" (ngModelChange)="change()"  [spinners]="false"></ngb-timepicker>
+	<ngb-timepicker #untilTimePicker [(ngModel)]="survey.untilTime" name="untilTime" class="col-sm-5"
+		(ngModelChange)="change()" [spinners]="false"></ngb-timepicker>
 </div>
