--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -30,8 +30,8 @@
 
 
 		<div class="form-group row">
-			<label for="photo" class="col-sm-2 col-form-label" i18n>Photo</label>
-			<input type="file" ngModel name="photo" (change)="optionForm.value.image = $event.target.files[0]" />
+			<label for="image" class="col-sm-2 col-form-label" i18n>Photo</label>
+			<input type="file" ngModelname="image" id="image" (change)="optionForm.value.image = $event.target.files[0]" />
 		</div>
 
 		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! optionForm.valid" />
