--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -2,48 +2,49 @@
 
 <ng-container *ngIf="errorMessage == null; else error">
 
+	<h1>Editing Survey ID: {{ survey.id }}</h1>
+
 	<form #surveyForm="ngForm" (ngSubmit)="updateSurvey(surveyForm.value.survey)">
 		<app-survey-form [(ngModel)]="survey" [survey]="survey" name="survey"></app-survey-form>
 
-		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! surveyForm.valid" />
+		<input type="submit" name="send" value="Edit" class="btn btn-primary" [disabled]="! surveyForm.valid" />
 	</form>
 
 
-
-	<div class="row">
-		<button i18n (click)="showNewOption()" class="btn btn-primary">New Option</button>
-	</div>
 
 
 
 	<form #optionForm="ngForm" (ngSubmit)="addOption(optionForm.value)">
 		<div class="form-group row">
-			<label for="name" class="col-sm-2 col-form-label" i18n>Short Name</label>
-			<input type="text" ngModel name="name" id="name" class="form-control col-sm-10" required/>
+			<label for="name" class="col-sm-1 col-form-label" i18n>Short Name</label>
+			<input type="text" ngModel name="name" id="name" class="form-control col-sm-6" required/>
 		</div>
 
 
 		<div class="form-group row">
-			<label for="description" class="col-sm-2 col-form-label" i18n>Description</label>
-			<textarea ngModel name="description" id="description" class="form-control col-sm-10"></textarea>
+			<label for="description" class="col-sm-1 col-form-label" i18n>Description</label>
+			<textarea ngModel name="description" id="description" class="form-control col-sm-6"></textarea>
 		</div>
 
 
 		<div class="form-group row">
-			<label for="image" class="col-sm-2 col-form-label" i18n>Photo</label>
-			<input type="file" ngModelname="image" id="image" (change)="optionForm.value.image = $event.target.files[0]" />
+			<label for="image" class="col-sm-1 col-form-label" i18n>Photo</label>
+			<input type="file" ngModel name="image" id="image" (change)="optionForm.value.image = $event.target.files[0]" />
 		</div>
 
 		<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! optionForm.valid" />
 
 	</form>
 
+<!--
+	<form>
+		<div *ngFor="let option of survey.options; let i = index" class="border">
+			<app-option-form formControlName [option]="survey.options[i]" ></app-option-form>
 
-	<div *ngFor="let option of survey.options">
-		<p>{{ option.name }}</p>
-		<img [src]="option.imageUrl | safe" width="200" height="150" />
-
-	</div>
+			<input type="submit" name="send" value="send" class="btn btn-primary" [disabled]="! optionForm.valid" />
+		</div>
+	</form>
+-->
 </ng-container>
 
 
