--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
+* {
+	font-size: 14px;
+}
+
+
+body {
+	margin-top: 2rem;
+}
+
 /* You can add global styles to this file, and also import other style files */
 label, input {
 	padding-top: 0;
 	padding-bottom: 0;
 	height: 2rem;
 }
+
