Survey & options working. Ready to be shown.

--- a/src/app/option-form/option-form.component.html
+++ b/src/app/option-form/option-form.component.html
@@ -1,4 +1,7 @@
 <div [formGroup]="formGroup" class="option" >
+	<input type="hidden" formControlName="id" />
+
+
 	<div>
 		<label for="name" i18n>Short Name</label>
 		<input type="text" formControlName="name" id="name"  />
