--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -4,12 +4,29 @@
 
 	<h1>Editing Survey ID: {{ surveyId }}</h1>
 
-	<form [formGroup]="formGroup" (ngSubmit)="updateSurvey()">
+	<form [formGroup]="surveyFormGroup" (ngSubmit)="updateSurvey()">
 		<app-survey-form   formControlName="survey"></app-survey-form>
 
-		<input type="submit" name="send" value="Edit" [disabled]="formGroup.invalid" />
+		<input type="submit" name="send" value="Edit" [disabled]="surveyFormGroup.invalid" />
 	</form>
 
+
+	<form [formGroup]="optionFormGroup" (ngSubmit)="createOption()">
+			<app-option-form formControlName="option"></app-option-form>
+
+			<input type="submit" value="New" [disabled]="optionFormGroup.invalid" />
+	</form>
+
+
+	<div *ngFor="let xformGroup of optionFormGroups; let i = index">
+		<form [formGroup]="optionFormGroups[i]" (ngSubmit)="updateOption(i)">
+			<app-option-form formControlName="option"></app-option-form>
+
+			<input type="submit" value="Edit" [ngClass]="{'red-border': optionFormGroups[i].dirty }" [disabled]="! ( optionFormGroups[i].dirty && optionFormGroups[i].valid )" />
+		</form>
+
+		<button (click)="deleteOption(optionFormGroups[i].value.option.id)">Delete</button>
+	</div>
 
 
 </ng-container>
