--- a/src/app/option-form/option-form.component.html
+++ b/src/app/option-form/option-form.component.html
@@ -3,19 +3,19 @@
 
 
 	<div>
-		<label for="name" i18n>Short Name</label>
+		<label for="name">Short Name</label>
 		<input type="text" formControlName="name" id="name"  />
 	</div>
 
 
 	<div>
-		<label for="description" i18n>Description</label>
+		<label for="description">Description</label>
 		<textarea formControlName="description" id="description"></textarea>
 	</div>
 
 
 	<div>
-		<label for="file"  i18n>Photo</label>
+		<label for="file">Photo</label>
 		<input type="file" id="file" formControlName="file" />
 	</div>
 
