--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -9,7 +9,7 @@
 </form>
 
 <ng-container *ngIf="hasSurveys ; else noSurveys">
-
+	<h3>Uložená hlasování</h3>
 	<table border="1">
 		<thead>
 			<tr>
