Picture pointer. Pristine survey form.

--- a/src/app/option-form/option-form.component.html
+++ b/src/app/option-form/option-form.component.html
@@ -21,6 +21,6 @@
 
 
 	<figure *ngIf="!!imageUrl">
-		<img [src]="imageUrl | safe"  width="auto" height="100" (click)="doOverlay()" />
+		<img [src]="imageUrl | safe"  width="auto" height="100" (click)="doOverlay()" class="pointer" />
 	</figure>
 </div>
