--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -21,7 +21,7 @@
 
 	<h3 *ngIf="optionFormGroups.length > 0">Uložené volby</h3>
 	<div *ngFor="let xformGroup of optionFormGroups; let i = index">
-		<form [formGroup]="xformGroup" (ngSubmit)="updateOption(i)">
+		<form [formGroup]="optionFormGroups[i]" (ngSubmit)="updateOption(i)">
 			<app-option-form formControlName="option"></app-option-form>
 
 			<input type="submit" value="Upravit" [ngClass]="{'red-border': xformGroup.dirty }" [disabled]="! ( xformGroup.dirty && xformGroup.valid )" />
