--- a/src/app/option-form/option-form.component.html
+++ b/src/app/option-form/option-form.component.html
@@ -17,6 +17,9 @@
 	<label>Images</label>
 	<div formArrayName="images" *ngFor="let ximage of ximages; let i=index">
 		<app-image-form [formControl]="ximages[i]"></app-image-form>
+		<button *ngIf="i != 0" type="button">up</button>
+		<button *ngIf="i < ximages.length - 1" type="button">down</button>
+		<button type="button" (click)="deleteImage(i)">Delete</button>
 	</div>
 
 	<button type="button" (click)="addImage()">Add Image</button>
