--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -8,7 +8,7 @@
 	<input type="submit" name="new" value="Uložit" [disabled]="formGroup.invalid" />
 </form>
 
-<ng-container *ngIf="hasSurveys | async ; else noSurveys">
+<ng-container *ngIf="surveys.length > 0 ; else noSurveys">
 	<h3>Uložená hlasování</h3>
 	<table border="1">
 		<thead>
