Creating and retrieving images.

--- a/src/app/image-form/image-form.component.html
+++ b/src/app/image-form/image-form.component.html
@@ -1,4 +1,7 @@
 <div [formGroup]="formGroup">
+	<input type="hidden" formControlName="id" />
+
+	
 	<div>
 		<label for="file">Foto</label>
 		<input type="file" id="file" formControlName="file" />
