Hiding ugly input[type=file].

--- a/src/app/image-form/image-form.component.css
+++ b/src/app/image-form/image-form.component.css
@@ -1,3 +1,28 @@
 input.ng-invalid {
 	border: 5px solid green;
 }
+
+
+
+#fileContainer {
+	position: relative;
+}
+
+
+
+input[type=file] {
+	visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+
+
+#fakeFileChooser {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
